# Craft2Android

./: LICENSE  README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/x/craft2android/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  auth.c  client.c  glfwImp.c  glfwImp.h  main.c  main.h  native-lib.cpp  native-lib.h  test.h  util.c  util.h
app/src/main/java/com/x/craft2android/: CraftGLSurfaceView.kt  CraftRenderer.kt  MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/x/craft2android/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
